fixed footer whitespace issue

--- a/src/CSS/FooterImage.module.css
+++ b/src/CSS/FooterImage.module.css
@@ -4,3 +4,9 @@ img {
     height: 60px;
     float: right;
 }
+
+.footerTab {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
